# chaos-eater

./: .gitignore  ChaosEater_demo.py  Makefile  README.md  create_environment.sh  create_kind_cluster.sh  pyproject.toml  reproduce_ase2025.py  requirements.txt
chaos_eater/: chaos_eater.py
chaos_eater/analysis/: analyzer.py
chaos_eater/analysis/llm_agents/: analysis_agent.py
chaos_eater/backend/: api.py  cli_logger.py  streaming.py
chaos_eater/ce_tools/chaosmesh/: chaosmesh.py
chaos_eater/experiment/: experimenter.py
chaos_eater/experiment/llm_agents/: experiment_plan_agent.py  experiment_replan_agent.py
chaos_eater/frontend/: Dockerfile.test  app.jsx  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
chaos_eater/hypothesis/: hypothesizer.py
chaos_eater/improvement/: improver.py
chaos_eater/postprocessing/: postprocessor.py
chaos_eater/preprocessing/: preprocessor.py
chaos_eater/utils/: __init__.py  agent_runner.py  app_utils.py  constants.py  evaluation.py  functions.py  llms.py
cli/: Cargo.toml  deny.toml
cli/npm/chaos-eater-cli/: package.json
cli/npm/cli-darwin-arm64/: package.json
cli/scripts/: build-npm.sh
cli/src/: client.rs  main.rs  output.rs  stream.rs
cli/src/commands/: clusters.rs  config.rs  data.rs  health.rs  jobs.rs  mod.rs  sandbox.rs  stream_cmd.rs  upload.rs
cli/tests/: cli_integration.rs
docker/: .env.example  Dockerfile.frontend  Dockerfile_llm  Dockerfile_sandbox  docker-compose.frontend-test.yaml  docker-compose.notebook.yaml  docker-compose.ollama.nvidia.yaml  docker-compose.ollama.yaml  docker-compose.sandbox.yaml  docker-compose.test.yaml  docker-compose.yaml
evaluation/ase2025/: analyze_evaluation_result.ipynb  reproduce_ase2025.py
evaluation/reviewing/: evaluate_quality.py  reviewer.py
evaluation/synthetic/: evaluation.sh  generate_dataset.py  reproduce_synthetic.py
scripts/: test.sh
tests/: test_api.py  test_ce_tools.py  test_kustomize_input.py  test_sandbox_api.py  test_token_count.py  test_utils_functions.py  test_utils_k8s.py  test_utils_llms.py  test_utils_schemas.py
(+141 files in other folders)
