[project]
name = "chaos-eater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
license = { file = "LICENSE.md" }
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.124.4",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "kubernetes==30.1.0",
    "kubernetes-validate>=1.34.1",
    "langchain==0.3.7",
    "langchain-anthropic==0.2.4",
    "langchain-community>=0.3.5",
    "langchain-core==0.3.15",
    "langchain-google-genai==2.0.4",
    "langchain-ollama>=0.2.0",
    "langchain-openai==0.2.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pydantic==2.10.6",
    "pydot>=4.0.1",
    "rich>=13.0.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "scipy>=1.15.3",
    "streamlit==1.36.0",
    "streamlit-extras==0.4.3",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
